--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
     </ul></section>
-    <section class="section-four"><h2 class="header-two">What are we doing</h2> 
+    <section><h2 class="header-two">What are we doing</h2> 
     <ul class="list">
     <li><img src="./images/image1.jpg" alt="Charts on a computer screen" width="360"></li>
     <li><img src="./images/image2.jpg" alt="Four phone screens" width="360"></li>
     <li><img src="./images/image3.jpg" alt="Opened article on a phone screen" width="360"> </li></ul></section>
-    <section><h2 class="header-two">Our Team</h2>
-    <ul class="list">
+    <section class="section-four"><h2 class="header-two">Our Team</h2>
+    <ul class="list team">
     <li> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
     <h3 class="header-three">Mark Guerrero</h3>
     <p class="text">Product Designer</p></li>
