--- a/portfolio.html
+++ b/portfolio.html
@@ -50,23 +50,23 @@
       </ul>
       <ul class="list">
         <li><a class="link" href="./"><img src="./images/image4.jpg" alt="Phone screen showing an app" width="360">
-        <h3 class="header-three">Banking App Interface Concept</h3><p class="text"> App</p></a></li>
+        <h2 class="header-portf">Banking App Interface Concept</h2><p class="text"> App</p></a></li>
     <li><a class="link" href="./"><img src="./images/image5.jpg" alt="Phone screen with a QR code on it" width="360">
-       <h3 class="header-three">Cashless Payment</h3><p class="text">Marketing</p></a></li>
+       <h2 class="header-portf">Cashless Payment</h2><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="./images/image6.jpg" alt="Phone and laptop screens" width="360">
-     <h3 class="header-three">Meditation App</h3><p class="text">App</p></a></li>
+     <h2 class="header-portf">Meditation App</h2><p class="text">App</p></a></li>
     <li><a class="link" href="./"><img src="./images/image7.jpg" alt="Hands on a steering wheel" width="360">
-    <h3 class="header-three">Taxi Service</h3><p class="text">Marketing</p></a></li>
+    <h2 class="header-portf">Taxi Service</h2><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="./images/image8.jpg" alt="Five phone screens" width="360">
-    <h3 class="header-three">Screen Illustrations</h3><p class="text">Design</p></a></li>
+    <h2 class="header-portf">Screen Illustrations</h2><p class="text">Design</p></a></li>
     <li><a class="link" href="./"><img src="./images/image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
-    <h3 class="header-three">Online Courses</h3><p class="text">Marketing</p></a></li>
+    <h2 class="header-portf">Online Courses</h2><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="./images/image10.jpg" alt="Samples of Instagram stories" width="360">
-    <h3 class="header-three">Instagram Stories Concept</h3><p class="text">Design</p></a></li>
+    <h2 class="header-portf">Instagram Stories Concept</h2><p class="text">Design</p></a></li>
     <li><a class="link" href="./"><img src="./images/image11.jpg" alt="A woman carrying a grocery bag" width="360">
-    <h3 class="header-three">Organic Food</h3><p class="text">Web Site</p></a></li>
+    <h2 class="header-portf">Organic Food</h2><p class="text">Web Site</p></a></li>
     <li><a class="link" href="./"><img src="./images/image12.jpg" alt="Barista making coffee" width="360">
-    <h3 class="header-three">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
+    <h2 class="header-portf">Fresh Coffee</h2><p class="text">Web Site</p></a></li>
       </ul>
     </section>
     </main>
