--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
     <li><img src="./images/image2.jpg" alt="Four phone screens" width="360"></li>
     <li><img src="./images/image3.jpg" alt="Opened article on a phone screen" width="360"> </li></ul></section>
     <section class="section-four"><h2 class="header-two">Our Team</h2>
-    <ul class="list team">
-    <li> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
+    <ul class="list">
+    <li class="team"> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
     <h3 class="header-three">Mark Guerrero</h3>
     <p class="text">Product Designer</p></li>
-    <li><img src="./images/tom.jpg" alt="Tom Ford" width="264">
+    <li class="team"><img src="./images/tom.jpg" alt="Tom Ford" width="264">
     <h3 class="header-three">Tom Ford</h3>
     <p class="text">Frontend Developer</p>
     </li>
-    <li><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+    <li class="team"><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
     <h3 class="header-three">Camila Garcia</h3>
     <p class="text">Marketing</p></li>
-    <li><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
+    <li class="team"><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
     <h3 class="header-three">Daniel Wilson</h3>
     <p class="text">UI Designer</p></li>
     </ul></section>
