--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     
 </head>
 <body class="main">
-
-   <header>
-      <nav>
-         <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
-         <ul class="list">
+ <div class="container">
+   <header class="header-container">
+      <nav class="nav">
+         <div class="logo-nav-container"><a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+         <ul class="list list-container">
             <li class="nav-link"><a class="nav link" href="./index.html">Studio</a></li>
             <li class="nav-link"><a class="nav link" href="./portfolio.html">Portfolio</a></li>
             <li class="nav-link"><a class="nav link" href="">Contacts</a></li>
-         </ul>
+         </ul></div>
       </nav>
-      <address class="contact">
-         <ul class="list">
+     <div class="contact-container"> <address class="contact">
+         <ul class="list list-container">
             <li><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a></li>
          </ul>
-      </address>
+      </address></div>
    </header>
 
    <main>
-   <section class="section-one"> <h1 class="header-one">Effective Solutions
-    for Your Business</h1>
+   <section class="section-one"> <div class="header-one"><h1 class="header-one">Effective Solutions <br>
+    for Your Business</h1></div>
       <button type="button" class="button">Order Service</button></section>
    <section><h2 hidden>Lorem, ipsum dolor.</h2>
    <ul class="list text">
@@ -90,6 +90,6 @@
    <a class="logo link" href="./index.html">Web<span class="logo-two">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
-
+ </div> 
 </body>
 </html>
