--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         font-family: 'Roboto', cursive;
     }
 </style>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
 <link rel="stylesheet" href="./css/styles.css" />
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,6 +23,7 @@
 </head>
 
 <body class="main">
+  <class="container">
     <header>
         <nav>
             <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
@@ -75,7 +76,7 @@
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p>
 </footer>
-
+ </div>
     </body>
     
     </html>
